Bug 120101 - [Mac] Suspended HTMLMediaElements can still hold power assertion after playback stops.
Summary: [Mac] Suspended HTMLMediaElements can still hold power assertion after playba...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-20 20:21 PDT by Jer Noble
Modified: 2013-08-20 21:01 PDT (History)
4 users (show)

See Also:


Attachments
Patch (1.80 KB, patch)
2013-08-20 20:26 PDT, Jer Noble
eric.carlson: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2013-08-20 20:21:33 PDT
[Mac] Suspended HTMLMediaElements can still hold power assertion after playback stops.
Comment 1 Jer Noble 2013-08-20 20:26:24 PDT
Created attachment 209246 [details]
Patch
Comment 2 Jer Noble 2013-08-20 20:58:38 PDT
<rdar://problem/14765691>
Comment 3 Jer Noble 2013-08-20 21:01:03 PDT
Committed r154378: <http://trac.webkit.org/changeset/154378>