<https://webkit.org/b/120101> [Mac] Suspended HTMLMediaElements can still hold power assertion after playback stops.

Reviewed by Eric Carlson.

Call updateDisplaySleep() when we clear our MediaPlayer, as doing so may kill any in-flight
rateChanged() notifications.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::clearMediaPlayer):
(WebCore::HTMLMediaElement::stop):

Canonical link: https://commits.webkit.org/138042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154378 268f45cc-cd09-0410-ab3c-d52691b4dbfc